# continuum

./: Cargo.toml  README.md  bevy_game.d.ts  bevy_game.js  bevy_game_bg.wasm.d.ts  flake.nix  index.html  render.yaml  xrcad-git.js
.github/workflows/: gh-pages.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/kernel/: Cargo.toml
crates/kernel/src/brep/: mod.rs  topology.rs
crates/xrcad/: Cargo.toml
crates/xrcad-collab/: Cargo.toml
crates/xrcad-collab/src/: doc_op.rs  git_committer.rs  lib.rs  op_log.rs  presence.rs  session.rs  time.rs  vector_clock.rs
crates/xrcad-data/: Cargo.toml
crates/xrcad-data/src/: backend.rs  brep.rs  lib.rs
crates/xrcad-data/src/backend/: gix_backend.rs  isomorphic_git_backend.rs
crates/xrcad-editor/: Cargo.toml
crates/xrcad-editor/src/: lib.rs
crates/xrcad-input/: Cargo.toml
crates/xrcad-input/src/: keyboard.rs  lib.rs  mouse.rs  roles.rs  router.rs  touch.rs  voice.rs
crates/xrcad-io-iges/: Cargo.toml
crates/xrcad-io-iges/src/: lib.rs
crates/xrcad-io-obj/: Cargo.toml
crates/xrcad-io-obj/src/: lib.rs
crates/xrcad-io-step/: Cargo.toml
crates/xrcad-io-step/src/: lib.rs
crates/xrcad-kernel/: Cargo.toml
crates/xrcad-kernel/src/brep/: id.rs  mod.rs
crates/xrcad-net/: Cargo.toml
crates/xrcad-net/src/: error.rs  lib.rs  messages.rs  session_code.rs
crates/xrcad-net/src/native/: coordinator.rs  framing.rs  mod.rs  peer.rs
crates/xrcad-net/src/wasm/: mod.rs
crates/xrcad-script/: Cargo.toml
crates/xrcad-script/src/: lib.rs
crates/xrcad-server/: Cargo.toml
crates/xrcad-server/src/: main.rs
crates/xrcad-ui/: Cargo.toml
crates/xrcad-ui/src/: lib.rs
crates/xrcad-viewer/: Cargo.toml
crates/xrcad-viewer/src/: lib.rs
crates/xrcad-widgets/: Cargo.toml
crates/xrcad-widgets/src/: lib.rs
crates/xrcad-xr/: Cargo.toml
crates/xrcad-xr/src/: lib.rs
crates/xrcad/src/: camera.rs  main.rs  peer_markers.rs  scene_plugin.rs
src/: main.rs
wasm/: index.html  package.json  xrcad-git.js
