[package]
name        = "xrcad-collab"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "xrcad collaboration protocol: operation log, presence, vector clocks"

[features]
default = ["native"]
native  = ["xrcad-net/native"]
wasm    = ["xrcad-net/wasm"]

[dependencies]
# ── workspace ────────────────────────────────────────────────────────────────
bevy.workspace      = true
serde.workspace     = true
postcard.workspace  = true
uuid.workspace      = true
thiserror.workspace = true
tracing.workspace   = true

# ── sibling crates ───────────────────────────────────────────────────────────
xrcad-net.workspace = true

[dev-dependencies]
bevy.workspace = true
