[package]
name        = "xrcad-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "xrcad transport layer: peer discovery, connections, raw message delivery"

[dependencies]
# ── workspace (all targets) ───────────────────────────────────────────────────
bevy.workspace      = true
serde.workspace     = true
postcard.workspace  = true
uuid.workspace      = true
thiserror.workspace = true
tracing.workspace   = true

# ── native (non-WASM) ─────────────────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mdns-sd = { version = "0.18" }
tokio   = { version = "1", features = ["net", "sync", "rt", "rt-multi-thread", "macros", "time", "io-util"] }
socket2 = { version = "0.6", features = ["all"] }

# ── WASM ──────────────────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
    "Location",
    "Window",
    "Event",
    "EventTarget",
] }
wasm-bindgen         = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
js-sys               = { version = "0.3" }
serde_json.workspace = true

[dev-dependencies]
bevy.workspace = true
