[package]
name = "xrcad"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy = { workspace = true }
xrcad-kernel = { workspace = true }
xrcad-input = { workspace = true }
xrcad-net = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
