[package]
name = "xrcad"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bevy         = { workspace = true }
xrcad-kernel = { workspace = true }
xrcad-input  = { workspace = true }
xrcad-net    = { workspace = true }
xrcad-collab = { workspace = true }
xrcad-data   = { workspace = true }
uuid         = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[lints]
workspace = true
